# DoneYet

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json
.cargo/: config.toml
src/: main.tsx  types.ts
src-tauri/: Cargo.toml  gen-installer-images.cjs  tauri.conf.json
src-tauri/capabilities/: calculator-window.json  calendar-window.json  default.json  note-window.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_fts.sql  0002_schema_v2.sql  0003_operation_log.sql  0004_indexes.sql
src-tauri/src/: i18n.rs  lib.rs  main.rs  shortcut.rs  state.rs  tray.rs
src-tauri/src/commands/: calendar.rs  categories.rs  lang.rs  mod.rs  notes.rs  op_log.rs  reminders.rs  todos.rs  window_mgr.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/repo/: categories.rs  mod.rs  notes.rs  op_log.rs  reminders.rs  todos.rs
src-tauri/src/scheduler/: mod.rs
src/components/: Calculator.tsx  Calendar.tsx  ReminderEditor.tsx  RemindersList.tsx  Settings.tsx  Signature.tsx  SwipeToDelete.tsx  Timeline.tsx  TodoList.tsx
src/components/editor/: TipTapEditor.tsx
src/i18n/: dict.ts  format.ts  index.ts  langStore.ts
src/lib/: calendarData.ts  easterEgg.ts  ipc.ts  useReorder.ts  window.ts
src/stores/: categoriesStore.ts  notesStore.ts  remindersStore.ts  settingsStore.ts  todosStore.ts  uiStore.ts  undoStore.ts
src/styles/: index.css
src/windows/: CalculatorWindow.tsx  CalendarWindow.tsx  Dashboard.tsx  NoteWindow.tsx
